# btrdbextras

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  Makefile  README.md  api.proto  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  test.py  version.py
.github/workflows/: python-main.yaml  release.yaml
btrdbextras/: __init__.py  conn.py  dq.py
btrdbextras/ds_utils/: anomaly.py  stream_info.py
btrdbextras/eventproc/: __init__.py  conn.py  eventproc.py
btrdbextras/eventproc/protobuff/: api.proto  api_pb2.py  api_pb2_grpc.py
btrdbextras/opendss_ingest/: IEEE_13_-_Create_Streams_Add_Data.ipynb  Intro_to_Simulation_with_OpenDSS.ipynb  README.md  opendss_ingestor.py  requirements.txt  simulation_utils.py
btrdbextras/opendss_ingest/Models/13Bus/: IEEE13Nodeckt.dss
btrdbextras/opendss_ingest/notebooks/: Intro_to_Simulation_with_OpenDSS.ipynb
btrdbextras/permalink/: permalink.py
docs/source/: conf.py  eventproc.rst  index.rst  installing.rst
eventproc/: conn.py  eventproc.py
eventproc/protobuff/: api_pb2.py  api_pb2_grpc.py
notebooks/: anomaly_detect.ipynb  dq_demo.ipynb
tests/: requirements.txt  test_base.py  test_opendss_ingestor.py  test_permalink.py
tests/test_ds_utils/: test_stream_info.py
