[project]
name = "btrdbextras"
version = "5.31.0"
description = "Enhancements additional features to interact with the Berkeley Tree Database"
authors = [
    {name="PingThingsIO", email="support@pingthings.io"},
]
dependencies = [
    "btrdb>=5.11.7",
    "certifi",
    "dill==0.3.2",
    "grpcio-tools>=1.16.1",
    "grpcio>=1.16.1",
    "sphinx_glpi_theme",
    "tabulate==0.8.9",
]
requires-python = ">=3.6, <4"
readme = "README.md"
license = {file="LICENSE.txt"}
keywords = ["btrdb", "timeseries", "database"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://btrdbextras.readthedocs.io/en/latest/"
Downloads = "https://github.com/PingThingsIO/btrdbextras/tarball/v5.31.0"
Documentation = "https://btrdbextras.readthedocs.io/en/latest/"
Download = "https://github.com/PingThingsIO/btrdbextras/tarball/v5.31.0"
Source = "https://github.com/PingThingsIO/btrdbextras"
Tracker = "https://github.com/PingThingsIO/btrdbextras/issues"
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.exclude-package-data]
drop = [
    "tests",
    "docs"
]
